--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ url = https://github.com/bi4528/sicspy
 project_urls =
     Bug Tracker = https://github.com/bi4528/sicspy/issues
 classifiers =
-    Programming Language :: Python :: 3.9 :: Only
+    Programming Language :: Python :: 3.9
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Operating System :: Microsoft :: Windows :: Windows 10
 
